--- a/sobre.css
+++ b/sobre.css
@@ -1,10 +1,14 @@
 body {
     font-family: 'Courier New', Courier, monospace;
+    margin: 0 auto;
+    padding: 30px;
+    width: 940px;
 }
 
 h1{
     color: #3D3D3D;
     background-color: #E1EDF2;
+    padding: 10px;
 }
 
 h2{
@@ -17,10 +21,13 @@ figure{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 30px;
+    padding: 15px;
 }
 
 figcaption{
     color: lightgrey;
+    margin-top: 10px;
 }
 
 
